fix top nav bar on iPhone 5

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -12,7 +12,7 @@
 	}
 
 	.nav-li {
-		font-size: 15px;
+		font-size: 12px;
 		padding-top: 0;
 		margin: 0 8px 0 8px;
 		padding-bottom: 0;
